# Q-lab

./: .env.example  .gitignore  PROJECT_BLUEPRINT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.omc/: project-memory.json
.omc/sessions/: 490f195b-77a9-4287-b3f9-c56870507950.json  65fc030f-a4a3-48b0-bc81-e9c4583291fe.json  6a907577-1e71-47c8-8f46-0bfd404e1d43.json  964c5747-7b77-41ee-b93c-a43f941312df.json
.omc/state/: agent-replay-6a907577-1e71-47c8-8f46-0bfd404e1d43.jsonl
.omc/state/checkpoints/: checkpoint-2026-06-24T16-00-34-407Z.json
app/: README.md  pubspec.yaml
app/.omc/state/: idle-notif-cooldown.json
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/core/: config.dart  env.dart  routes.dart  (+2 more)
app/test/: builder_factor_guard_test.dart  fromwire_fallback_test.dart  order_alert_payload_test.dart  parse_utils_test.dart  portfolio_currency_test.dart  stocks_api_test.dart  widget_test.dart
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/scripts/: run_daily_batch.py  run_jupyter.sh  verify_kis_tokens.py  watch_quotes.py
backend/tests/: __init__.py  conftest.py  test_api_portfolio.py  test_journal_analyzer.py  test_kis_auth.py  test_llm_budget.py  test_market_snapshot.py  test_rebalancer.py  test_risk_manager.py  test_toss_rest_client.py
data/manual/: kospi200_codes.csv  kospi200_codes.example.csv
research/: __init__.py
research/backtest/: __init__.py  engine.py  metrics.py  simulator.py  walk_forward.py
research/data_ingestion/: __init__.py  delisted_loader.py  fdr_loader.py  financial_loader.py  pykrx_loader.py
research/factors/: __init__.py  common.py  momentum.py  quality.py  value.py  volume.py
research/notebooks/: 01_factor_exploration.ipynb  02_data_visualization.ipynb
research/optimization/: __init__.py  grid_search.py  optuna_runner.py
research/scripts/: __init__.py  download_universe.py  download_us_universe.py  optimize.py  run_backtest.py
research/strategies/: multi_factor.py  value_v1.yaml
research/tests/: test_backtest_engine_smoke.py  test_us_factors.py
research/universe/: __init__.py  kosdaq150.py  kosdaq_all.py  kospi200.py  kospi_all.py
shared/: __init__.py
shared/db/: __init__.py  models.py  session.py
shared/domain/: __init__.py  account.py  alert.py  factor.py  position.py  principle.py  stock.py  strategy.py  trade.py  trade_journal.py  watchlist.py
shared/utils/: __init__.py  config.py  logger.py  time.py
(+144 files in other folders)
